--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Entre com a sua conta</p>
-                <form action="" method="get">
+                <form action="" method="post">
                     <div class="campo">
                         <i class="fa-solid fa-circle-user" id="logo"></i>
                         <label for="iemail">Email</label>
